# app/stockmovementvehicle/handler.go
@@ -193,7 +193,7 @@ func (h Handler) GenerateDeliveryOrder(c echo.Context) error {
 	return c.Blob(http.StatusOK, "application/pdf", pdfBytes)
 }
 
-// Create
+// CreatePurchaseorder
 // @Tags Stockmovementvehicle
 // @Security BearerAuth
 // @Accept json
@@ -234,7 +234,7 @@ func (h Handler) CreatePurchaseorder(c echo.Context) error {
 	return response.Success(http.StatusOK, response.SuccessHandler, nil).SendJSON(c)
 }
 
-// Update
+// UpdatePurchaseorder
 // @Tags Stockmovementvehicle
 // @Security BearerAuth
 // @Accept json
@@ -270,6 +270,90 @@ func (h Handler) UpdatePurchaseorder(c echo.Context) error {
 	}
 
 	err = h.usecase.UpdatePurchaseorder(loginUser, id, *req)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
+	}
+
+	return response.Success(http.StatusOK, response.SuccessHandler, nil).SendJSON(c)
+}
+
+// CreateRetail
+// @Tags Stockmovementvehicle
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param req body request.CreateStockmovementvehicleRetail true "json req body"
+// @Success      200  {object}	response.Response
+// @Failure      500  {object}  response.Response
+// @Router /stockmovementvehicle/retail [post]
+func (h Handler) CreateRetail(c echo.Context) error {
+	var err error
+
+	loginUser, err := jwt.GetUserLoginInfo(c)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
+	}
+
+	req := new(request.CreateStockmovementvehicleRetail)
+	if err = c.Bind(req); err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
+	}
+
+	utils.TrimWhitespace(req)
+
+	err = c.Validate(req)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerFailedValidation, err, response.ValidationError(err)).SendJSON(c)
+	}
+
+	if jwt.IsSaveWarehouseIDOR(loginUser, req.FromWarehouseID) {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerIDOR, err, nil).SendJSON(c)
+	}
+
+	err = h.usecase.CreateRetail(loginUser, *req)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
+	}
+
+	return response.Success(http.StatusOK, response.SuccessHandler, nil).SendJSON(c)
+}
+
+// UpdateRetail
+// @Tags Stockmovementvehicle
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param id path string true "ID"
+// @Param req body request.UpdateStockmovementvehicleRetail true "json req body"
+// @Success      200  {object}	response.Response
+// @Failure      500  {object}  response.Response
+// @Router /stockmovementvehicle/retail/{id} [put]
+func (h Handler) UpdateRetail(c echo.Context) error {
+	var err error
+
+	loginUser, err := jwt.GetUserLoginInfo(c)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
+	}
+
+	id := c.Param("id")
+	if id == "" {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetParam, err, nil).SendJSON(c)
+	}
+
+	req := new(request.UpdateStockmovementvehicleRetail)
+	if err = c.Bind(req); err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
+	}
+
+	utils.TrimWhitespace(req)
+
+	err = c.Validate(req)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerFailedValidation, err, response.ValidationError(err)).SendJSON(c)
+	}
+
+	err = h.usecase.UpdateRetail(loginUser, id, *req)
 	if err != nil {
 		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
 	}
